--- a/Dorm -/eLibraryManagement/Site1.Master
+++ b/Dorm -/eLibraryManagement/Site1.Master
@@ -1,4 +1,4 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site1.master.cs" Inherits="eLibraryManagement.Site1" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site1.master.cs" Inherits="eLibraryManagement.Site1" EnableViewState="true" %>
 
 <!DOCTYPE html>
 
